...
    </com.google.android.material.appbar.AppBarLayout>



    <androidx.recyclerview.widget.RecyclerView
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:id="@+id/citiesRV"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        tools:listitem="@layout/item_city_location"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        android:minHeight="200dp"
        android:layout_height="match_parent"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_input_add">

...
