...


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_gravity="right"
                    android:id="@+id/addLocationButton"
                    android:layout_marginRight="20dp"
                    android:background="@android:color/holo_green_light"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="50dp"
...
